--- a/Depo/Depo/Presentation/UserStories/Others/MusicBar/MusicBar.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/MusicBar/MusicBar.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -11,120 +12,91 @@
             <connections>
                 <outlet property="artistLabel" destination="hRl-4f-gjc" id="z9q-Eh-K35"/>
                 <outlet property="contentView" destination="7TD-Km-mkZ" id="CLE-8O-0lS"/>
-                <outlet property="gradientView" destination="CYb-oQ-PdE" id="pfa-Kn-rco"/>
                 <outlet property="musicNameLabel" destination="hjb-dB-NHk" id="BQz-xn-OMs"/>
                 <outlet property="playPauseButton" destination="rGm-wJ-sPn" id="olt-R2-xKG"/>
-                <outlet property="progressConstraint" destination="pla-nx-je0" id="Knn-ce-2em"/>
-                <outlet property="progressViewContainer" destination="AwS-bS-X3J" id="Sb6-Ra-jXP"/>
-                <outlet property="zoomUpButton" destination="7Qv-7Z-1M5" id="gxT-e0-djG"/>
+                <outlet property="slider" destination="9sT-Eg-jSK" id="aQc-rt-tfI"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="7TD-Km-mkZ" userLabel="musicBar">
-            <rect key="frame" x="0.0" y="0.0" width="378" height="70"/>
+            <rect key="frame" x="0.0" y="0.0" width="403" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O6c-hM-A1c" userLabel="view">
-                    <rect key="frame" x="0.0" y="0.0" width="378" height="70"/>
+                <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="Ybe-NA-xPc">
+                    <rect key="frame" x="16" y="16" width="371" height="40"/>
                     <subviews>
-                        <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CYb-oQ-PdE" customClass="GradientView" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="378" height="70"/>
-                        </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="750" text="Artist" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hRl-4f-gjc">
-                            <rect key="frame" x="53" y="31.5" width="272" height="13.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Qv-7Z-1M5">
-                            <rect key="frame" x="8" y="15" width="40" height="40"/>
-                            <accessibility key="accessibilityConfiguration" label="Zoom"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="40" id="Xja-N5-yKT"/>
-                                <constraint firstAttribute="width" constant="40" id="zFW-Zy-SbC"/>
-                            </constraints>
-                            <state key="normal" image="common06"/>
-                            <connections>
-                                <action selector="actionZoomUpButton:" destination="-1" eventType="touchUpInside" id="QId-PO-Whj"/>
-                            </connections>
-                        </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Music" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjb-dB-NHk">
-                            <rect key="frame" x="58" y="12" width="267" height="19.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rGm-wJ-sPn">
-                            <rect key="frame" x="330" y="15" width="40" height="40"/>
+                            <rect key="frame" x="0.0" y="0.0" width="24" height="40"/>
                             <accessibility key="accessibilityConfiguration">
                                 <accessibilityTraits key="traits" playsSound="YES"/>
                             </accessibility>
                             <constraints>
-                                <constraint firstAttribute="height" constant="40" id="qrW-uu-Gkk"/>
-                                <constraint firstAttribute="width" constant="40" id="vG0-lW-SHi"/>
+                                <constraint firstAttribute="width" constant="24" id="vG0-lW-SHi"/>
                             </constraints>
-                            <state key="normal" image="bar_pause"/>
-                            <state key="selected" image="bar_play"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <state key="normal" image="iconPauseRed"/>
+                            <state key="selected" image="iconPlay"/>
                             <connections>
                                 <action selector="actionPlayPauseButton:" destination="-1" eventType="touchUpInside" id="kSA-cb-pUj"/>
                             </connections>
                         </button>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="g2P-9a-ju8" userLabel="Labels">
+                            <rect key="frame" x="38" y="0.0" width="126" height="40"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="750" text="Artist" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hRl-4f-gjc">
+                                    <rect key="frame" x="0.0" y="0.0" width="126" height="13"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Music" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjb-dB-NHk">
+                                    <rect key="frame" x="0.0" y="21" width="126" height="19"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="Z0d-AS-FYx"/>
+                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="75" id="ta5-0a-qBe"/>
+                            </constraints>
+                        </stackView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F5e-Bn-Syz">
+                            <rect key="frame" x="178" y="0.0" width="193" height="40"/>
+                            <subviews>
+                                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="9sT-Eg-jSK">
+                                    <rect key="frame" x="-2" y="19" width="197" height="3"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="2" id="tqg-Mh-Kcy"/>
+                                    </constraints>
+                                </slider>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="9sT-Eg-jSK" firstAttribute="leading" secondItem="F5e-Bn-Syz" secondAttribute="leading" id="5kr-Vj-aSJ"/>
+                                <constraint firstAttribute="trailing" secondItem="9sT-Eg-jSK" secondAttribute="trailing" id="alQ-wz-j24"/>
+                                <constraint firstAttribute="width" constant="193" id="c3M-ee-MjM"/>
+                                <constraint firstItem="9sT-Eg-jSK" firstAttribute="centerY" secondItem="F5e-Bn-Syz" secondAttribute="centerY" id="iFL-Jy-RIu"/>
+                            </constraints>
+                        </view>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstItem="7Qv-7Z-1M5" firstAttribute="centerY" secondItem="O6c-hM-A1c" secondAttribute="centerY" id="29h-Iy-Cwg"/>
-                        <constraint firstItem="hjb-dB-NHk" firstAttribute="top" secondItem="O6c-hM-A1c" secondAttribute="top" constant="12" id="3lp-oc-kHE"/>
-                        <constraint firstItem="CYb-oQ-PdE" firstAttribute="leading" secondItem="O6c-hM-A1c" secondAttribute="leading" id="7XK-nf-fbO"/>
-                        <constraint firstItem="rGm-wJ-sPn" firstAttribute="centerY" secondItem="O6c-hM-A1c" secondAttribute="centerY" id="FIb-fo-Hnw"/>
-                        <constraint firstAttribute="trailing" secondItem="CYb-oQ-PdE" secondAttribute="trailing" id="IcZ-z2-chU"/>
-                        <constraint firstItem="hRl-4f-gjc" firstAttribute="leading" secondItem="7Qv-7Z-1M5" secondAttribute="trailing" constant="5" id="Jnb-HY-wbh"/>
-                        <constraint firstAttribute="bottom" secondItem="CYb-oQ-PdE" secondAttribute="bottom" id="Uz0-BD-RSU"/>
-                        <constraint firstItem="rGm-wJ-sPn" firstAttribute="leading" secondItem="hjb-dB-NHk" secondAttribute="trailing" constant="5" id="VHG-8h-2kG"/>
-                        <constraint firstItem="7Qv-7Z-1M5" firstAttribute="leading" secondItem="O6c-hM-A1c" secondAttribute="leading" constant="8" id="YMf-fh-YUb"/>
-                        <constraint firstItem="hjb-dB-NHk" firstAttribute="leading" secondItem="7Qv-7Z-1M5" secondAttribute="trailing" constant="10" id="Zak-uG-Qxy"/>
-                        <constraint firstItem="CYb-oQ-PdE" firstAttribute="top" secondItem="O6c-hM-A1c" secondAttribute="top" id="dGM-ap-PwQ"/>
-                        <constraint firstItem="rGm-wJ-sPn" firstAttribute="leading" secondItem="hRl-4f-gjc" secondAttribute="trailing" constant="5" id="fxe-Ha-rZw"/>
-                        <constraint firstAttribute="trailing" secondItem="rGm-wJ-sPn" secondAttribute="trailing" constant="8" id="t2k-F8-iuK"/>
-                        <constraint firstItem="hRl-4f-gjc" firstAttribute="top" secondItem="hjb-dB-NHk" secondAttribute="bottom" id="uyI-F8-t4O"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AwS-bS-X3J" customClass="GradientView" customModule="Billo" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="0.0" width="378" height="6"/>
-                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="6" id="Nmp-dB-fEO"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X22-16-emb">
-                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="6"/>
-                    <color key="backgroundColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="6" id="Rwk-Dc-hO7"/>
-                        <constraint firstAttribute="width" priority="999" id="pla-nx-je0"/>
-                    </constraints>
-                </view>
+                </stackView>
             </subviews>
-            <color key="backgroundColor" red="0.98039215690000003" green="0.60784313729999995" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" name="darkRedBottomPopup"/>
             <constraints>
-                <constraint firstItem="O6c-hM-A1c" firstAttribute="top" secondItem="7TD-Km-mkZ" secondAttribute="top" id="1FV-DR-RCU"/>
-                <constraint firstAttribute="trailing" secondItem="O6c-hM-A1c" secondAttribute="trailing" id="6VZ-r1-J7k"/>
-                <constraint firstItem="O6c-hM-A1c" firstAttribute="leading" secondItem="7TD-Km-mkZ" secondAttribute="leading" id="Jb5-m3-hQQ"/>
-                <constraint firstItem="AwS-bS-X3J" firstAttribute="top" secondItem="7TD-Km-mkZ" secondAttribute="top" id="Qzi-zH-co4"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="X22-16-emb" secondAttribute="trailing" id="RLP-fh-C5J"/>
-                <constraint firstItem="AwS-bS-X3J" firstAttribute="leading" secondItem="7TD-Km-mkZ" secondAttribute="leading" id="YlP-A9-fES"/>
-                <constraint firstAttribute="bottom" secondItem="O6c-hM-A1c" secondAttribute="bottom" id="hii-yB-ogt"/>
-                <constraint firstItem="X22-16-emb" firstAttribute="top" secondItem="7TD-Km-mkZ" secondAttribute="top" id="mbI-DX-XpU"/>
-                <constraint firstItem="X22-16-emb" firstAttribute="leading" secondItem="7TD-Km-mkZ" secondAttribute="leading" id="pvg-He-mfN"/>
-                <constraint firstAttribute="trailing" secondItem="AwS-bS-X3J" secondAttribute="trailing" id="wmR-Pf-5Rx"/>
+                <constraint firstAttribute="trailing" secondItem="Ybe-NA-xPc" secondAttribute="trailing" constant="16" id="D8G-Qd-7EI"/>
+                <constraint firstItem="Ybe-NA-xPc" firstAttribute="leading" secondItem="7TD-Km-mkZ" secondAttribute="leading" constant="16" id="EBd-up-tE8"/>
+                <constraint firstItem="Ybe-NA-xPc" firstAttribute="centerY" secondItem="7TD-Km-mkZ" secondAttribute="centerY" constant="-9" id="SJd-R1-4WS"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-455" y="413"/>
+            <point key="canvasLocation" x="-724.6875" y="425"/>
         </view>
     </objects>
     <resources>
-        <image name="bar_pause" width="16" height="18"/>
-        <image name="bar_play" width="17" height="19"/>
-        <image name="common06" width="18" height="10"/>
+        <image name="iconPauseRed" width="24" height="24"/>
+        <image name="iconPlay" width="25" height="25"/>
+        <namedColor name="darkRedBottomPopup">
+            <color red="0.72156862745098038" green="0.11764705882352941" blue="0.16470588235294117" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
