--- a/Depo/Depo/Presentation/UserStories/Settings/Permissions/PermissionsView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Permissions/PermissionsView.xib
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -21,22 +22,22 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rLk-2Z-9Z9">
-                    <rect key="frame" x="8" y="22" width="346" height="257"/>
+                    <rect key="frame" x="8" y="0.0" width="346" height="300"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="3sh-JM-h47">
-                            <rect key="frame" x="16" y="22" width="314" height="214"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="3sh-JM-h47">
+                            <rect key="frame" x="0.0" y="0.0" width="346" height="284"/>
                             <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D8w-cS-76U">
-                                    <rect key="frame" x="0.0" y="0.0" width="314" height="31"/>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D8w-cS-76U" userLabel="SwitchContentView">
+                                    <rect key="frame" x="0.0" y="0.0" width="346" height="65"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4eH-pQ-DLc" userLabel="Title Label">
-                                            <rect key="frame" x="0.0" y="5" width="261" height="21"/>
+                                            <rect key="frame" x="16" y="22" width="44.5" height="21"/>
                                             <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="18"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XhQ-9N-Hd4" customClass="GradientSwitch" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="265" y="0.0" width="51" height="31"/>
+                                            <rect key="frame" x="281" y="17" width="51" height="31"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="49" id="feF-oE-oPs"/>
                                             </constraints>
@@ -47,41 +48,50 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="XhQ-9N-Hd4" secondAttribute="trailing" id="8fW-eB-z1Y"/>
-                                        <constraint firstItem="XhQ-9N-Hd4" firstAttribute="leading" secondItem="4eH-pQ-DLc" secondAttribute="trailing" constant="4" id="X8p-kT-xtd"/>
-                                        <constraint firstAttribute="height" constant="31" id="dDY-NO-oCY"/>
+                                        <constraint firstAttribute="trailing" secondItem="XhQ-9N-Hd4" secondAttribute="trailing" constant="16" id="8fW-eB-z1Y"/>
                                         <constraint firstItem="XhQ-9N-Hd4" firstAttribute="centerY" secondItem="D8w-cS-76U" secondAttribute="centerY" id="gq6-17-vPT"/>
+                                        <constraint firstAttribute="height" constant="65" id="lxm-WI-bje"/>
                                         <constraint firstItem="4eH-pQ-DLc" firstAttribute="centerY" secondItem="D8w-cS-76U" secondAttribute="centerY" id="mox-1a-CNS"/>
-                                        <constraint firstItem="4eH-pQ-DLc" firstAttribute="leading" secondItem="D8w-cS-76U" secondAttribute="leading" id="zME-h0-i1n"/>
+                                        <constraint firstItem="4eH-pQ-DLc" firstAttribute="leading" secondItem="D8w-cS-76U" secondAttribute="leading" constant="16" id="zME-h0-i1n"/>
                                     </constraints>
                                 </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YOm-67-OGW" userLabel="In Progress Label">
-                                    <rect key="frame" x="0.0" y="54" width="314" height="17"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <color key="textColor" name="label"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q0l-s5-sKr" userLabel="Description View" customClass="IntrinsicEmptiableTextView" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="94" width="314" height="120"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                </textView>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pvu-j9-fb6" userLabel="DescriptionView">
+                                    <rect key="frame" x="0.0" y="73" width="346" height="211"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YOm-67-OGW" userLabel="In Progress Label">
+                                            <rect key="frame" x="16" y="0.0" width="314" height="17"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" name="label"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q0l-s5-sKr" userLabel="Description View" customClass="IntrinsicEmptiableTextView" customModule="Billo" customModuleProvider="target">
+                                            <rect key="frame" x="16" y="8" width="314" height="187"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstItem="q0l-s5-sKr" firstAttribute="top" secondItem="Pvu-j9-fb6" secondAttribute="top" constant="8" id="FJJ-LP-1hO"/>
+                                        <constraint firstItem="YOm-67-OGW" firstAttribute="top" secondItem="Pvu-j9-fb6" secondAttribute="top" id="Nqv-zL-zeJ"/>
+                                        <constraint firstAttribute="trailing" secondItem="q0l-s5-sKr" secondAttribute="trailing" constant="16" id="PK4-39-Wzc"/>
+                                        <constraint firstAttribute="trailing" secondItem="YOm-67-OGW" secondAttribute="trailing" constant="16" id="UMI-mk-HZo"/>
+                                        <constraint firstAttribute="bottom" secondItem="q0l-s5-sKr" secondAttribute="bottom" constant="16" id="W5S-sb-zvO"/>
+                                        <constraint firstItem="q0l-s5-sKr" firstAttribute="leading" secondItem="Pvu-j9-fb6" secondAttribute="leading" constant="16" id="a4o-wr-juz"/>
+                                        <constraint firstItem="YOm-67-OGW" firstAttribute="leading" secondItem="Pvu-j9-fb6" secondAttribute="leading" constant="16" id="ep0-jF-P14"/>
+                                    </constraints>
+                                </view>
                             </subviews>
-                            <constraints>
-                                <constraint firstItem="D8w-cS-76U" firstAttribute="leading" secondItem="3sh-JM-h47" secondAttribute="leading" id="43A-yE-L5T"/>
-                                <constraint firstAttribute="trailing" secondItem="D8w-cS-76U" secondAttribute="trailing" id="Ib0-ae-mzd"/>
-                                <constraint firstItem="D8w-cS-76U" firstAttribute="top" secondItem="3sh-JM-h47" secondAttribute="top" id="cgP-xb-pqs"/>
-                            </constraints>
                         </stackView>
                     </subviews>
                     <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="3sh-JM-h47" secondAttribute="bottom" constant="21" id="E0O-QH-r1o"/>
-                        <constraint firstItem="3sh-JM-h47" firstAttribute="top" secondItem="rLk-2Z-9Z9" secondAttribute="top" constant="22" id="ZJi-sO-gny"/>
-                        <constraint firstAttribute="trailing" secondItem="3sh-JM-h47" secondAttribute="trailing" constant="16" id="d6k-Ge-g2N"/>
-                        <constraint firstItem="3sh-JM-h47" firstAttribute="leading" secondItem="rLk-2Z-9Z9" secondAttribute="leading" constant="16" id="jXq-A8-rnx"/>
+                        <constraint firstAttribute="bottom" secondItem="3sh-JM-h47" secondAttribute="bottom" constant="16" id="E0O-QH-r1o"/>
+                        <constraint firstItem="3sh-JM-h47" firstAttribute="top" secondItem="rLk-2Z-9Z9" secondAttribute="top" id="ZJi-sO-gny"/>
+                        <constraint firstAttribute="trailing" secondItem="3sh-JM-h47" secondAttribute="trailing" id="d6k-Ge-g2N"/>
+                        <constraint firstItem="3sh-JM-h47" firstAttribute="leading" secondItem="rLk-2Z-9Z9" secondAttribute="leading" id="jXq-A8-rnx"/>
                     </constraints>
                 </view>
             </subviews>
@@ -89,8 +99,8 @@
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstItem="rLk-2Z-9Z9" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="1bf-ST-0FY"/>
-                <constraint firstItem="rLk-2Z-9Z9" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="22" id="8cj-dZ-KLc"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="rLk-2Z-9Z9" secondAttribute="bottom" constant="21" id="MrA-oc-van"/>
+                <constraint firstItem="rLk-2Z-9Z9" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="8cj-dZ-KLc"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="rLk-2Z-9Z9" secondAttribute="bottom" id="MrA-oc-van"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="rLk-2Z-9Z9" secondAttribute="trailing" constant="8" id="Shg-ZQ-tuC"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -99,9 +109,10 @@
                 <outlet property="descriptionView" destination="q0l-s5-sKr" id="dn9-ue-qhe"/>
                 <outlet property="inProgressLabel" destination="YOm-67-OGW" id="SNL-og-av6"/>
                 <outlet property="permissionSwitch" destination="XhQ-9N-Hd4" id="30U-sf-DRk"/>
+                <outlet property="switchContentView" destination="D8w-cS-76U" id="xNF-in-RlC"/>
                 <outlet property="titleLabel" destination="4eH-pQ-DLc" id="Wz3-wc-aiz"/>
             </connections>
-            <point key="canvasLocation" x="118" y="-35"/>
+            <point key="canvasLocation" x="116.8" y="-35.082458770614693"/>
         </view>
         <customObject id="2Cb-Ii-y0R" customClass="PermissionsDesigner" customModule="Billo" customModuleProvider="target">
             <connections>
@@ -121,5 +132,8 @@
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
